# Gtest-using-CMake-and-Docker

./: CMakeLists.txt  README.md
docker/: Dockerfile
src/: main.cpp
tests/: gtest.cpp
